@@ -1,5 +1,6 @@
 package org.aoju.bus.gitlab;
 
+import org.aoju.bus.core.lang.Charset;
 import org.aoju.bus.core.lang.Symbol;
 import org.aoju.bus.gitlab.GitLabApi.ApiVersion;
 import org.aoju.bus.gitlab.models.*;
@@ -678,7 +679,7 @@ public class ProjectApi extends AbstractApi implements Constants {
 
         String projectPath = null;
         try {
-            projectPath = URLEncoder.encode(namespace + Symbol.SLASH + project, "UTF-8");
+            projectPath = URLEncoder.encode(namespace + Symbol.SLASH + project, Charset.DEFAULT_UTF_8);
         } catch (UnsupportedEncodingException uee) {
             throw (new GitLabApiException(uee));
         }
@@ -727,7 +728,7 @@ public class ProjectApi extends AbstractApi implements Constants {
 
         String projectPath = null;
         try {
-            projectPath = URLEncoder.encode(namespace + Symbol.SLASH + project, "UTF-8");
+            projectPath = URLEncoder.encode(namespace + Symbol.SLASH + project, Charset.DEFAULT_UTF_8);
         } catch (UnsupportedEncodingException uee) {
             throw (new GitLabApiException(uee));
         }
