@@ -24,6 +24,8 @@
  ********************************************************************************/
 package org.aoju.bus.image;
 
+import org.aoju.bus.core.lang.Charset;
+import org.aoju.bus.core.lang.Normal;
 import org.aoju.bus.core.lang.Symbol;
 import org.aoju.bus.image.galaxy.data.Attributes;
 import org.aoju.bus.image.galaxy.data.DatePrecision;
@@ -40,17 +42,21 @@ import java.util.*;
 import java.util.concurrent.ThreadLocalRandom;
 
 /**
+ * 日期格式化等工具
+ *
  * @author Kimi Liu
- * @version 5.9.0
+ * @version 5.9.1
  * @since JDK 1.8+
  */
 public class Format extends java.text.Format {
 
     public static final Date[] EMPTY_DATES = {};
-    private static final char[] CHARS = {'0', '1', '2', '3', '4', '5', '6', '7',
+    private static final char[] CHARS = {
+            '0', '1', '2', '3', '4', '5', '6', '7',
             '8', '9', 'a', 'b', 'c', 'd', 'e', 'f',
             'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n',
-            'o', 'p', 'q', 'r', 's', 't', 'u', 'v'};
+            'o', 'p', 'q', 'r', 's', 't', 'u', 'v'
+    };
     private static final int LONG_BYTES = 8;
     private static TimeZone cachedTimeZone;
     private final String pattern;
@@ -60,7 +66,7 @@ public class Format extends java.text.Format {
     private final MessageFormat format;
 
     public Format(String pattern) {
-        ArrayList<String> tokens = tokenize(pattern);
+        List<String> tokens = tokenize(pattern);
         int n = tokens.size() / 2;
         this.pattern = pattern;
         this.tagPaths = new int[n][];
@@ -388,8 +394,8 @@ public class Format extends java.text.Format {
         return cal.getTime();
     }
 
-    private ArrayList<String> tokenize(String s) {
-        ArrayList<String> result = new ArrayList<String>();
+    private List<String> tokenize(String s) {
+        List<String> result = new ArrayList<>();
         StringTokenizer stk = new StringTokenizer(s, "{}", true);
         String tk;
         char delim;
@@ -402,7 +408,7 @@ public class Format extends java.text.Format {
             if (delim == '{') {
                 if (level++ == 0) {
                     if (prevDelim == '}')
-                        result.add("");
+                        result.add(Normal.EMPTY);
                 } else {
                     sb.append(delim);
                 }
@@ -425,7 +431,7 @@ public class Format extends java.text.Format {
         return result;
     }
 
-    private MessageFormat buildMessageFormat(ArrayList<String> tokens) {
+    private MessageFormat buildMessageFormat(List<String> tokens) {
         StringBuilder formatBuilder = new StringBuilder(pattern.length());
         int j = 0;
         for (int i = 0; i < tagPaths.length; i++) {
@@ -573,7 +579,7 @@ public class Format extends java.text.Format {
             Object toArg(Attributes attrs, int tag, int index) {
                 String s = attrs.getString(tag, index);
                 try {
-                    return s != null ? URLEncoder.encode(s, "UTF-8") : null;
+                    return s != null ? URLEncoder.encode(s, Charset.DEFAULT_UTF_8) : null;
                 } catch (UnsupportedEncodingException e) {
                     throw new AssertionError(e);
                 }
